# UnderTheGun

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cuda/: kernels.cu  kernels.hpp
include/: cfr_cpu.hpp  cfr_gpu.hpp  exploitability.hpp  file_helper.hpp  game.hpp  gpu_state.hpp  kuhn_builder.hpp
include/holdem/: action.hpp  all_in_equity_cache.hpp  betting_abstraction.hpp  betting_engine.hpp  betting_state.hpp  board_abstraction.hpp  chance_model.hpp  hand_abstraction.hpp  infoset_key.hpp  private_state.hpp  public_state.hpp  street.hpp  subgame_builder.hpp  subgame_config.hpp  terminal_utility.hpp
include/poker/: board.hpp  card.hpp  deck_mask.hpp  hand.hpp  hand_evaluator.hpp  range.hpp
src/: cfr_cpu.cpp  cfr_gpu.cpp  evaluator_table.cpp  exploitability.cpp  game.cpp  kuhn_builder.cpp  main.cpp
src/gui/: gui.cpp
src/gui/components/: CardButton.hh  ComboStrategyDisplay.hh  Page1_Settings.cpp  Page1_Settings.hh  Page2_Board.cpp  Page2_Board.hh  Page3_HeroRange.cpp  Page3_HeroRange.hh  Page4_VillainRange.cpp  Page4_VillainRange.hh  Page5_Progress.cpp  Page6_Strategy.cpp  Page6_Strategy.hh
src/holdem/: betting_engine.cpp  subgame_builder.cpp
src/poker/: hand_evaluator.cpp
tests/: test_betting_engine.cpp  test_cfr_cpu.cpp  test_deck_mask.cpp  test_flop_subgame_tree.cpp  test_gpu_strategy.cpp  test_gpu_vs_cpu.cpp  test_hand_evaluator.cpp  test_holdem_gpu.cpp  test_infoset_key_privacy.cpp  test_kuhn_tree.cpp  test_range_card_removal.cpp  test_river_subgame_tree.cpp  test_solver_validity.cpp  test_terminal_utility.cpp  test_turn_subgame_tree.cpp
